fixed continue having next arrow and copy problem with multiple pages

--- a/src/javascript/templates/patient1/patient1View21.hbs
+++ b/src/javascript/templates/patient1/patient1View21.hbs
@@ -180,7 +180,7 @@ Be sure to record the results in your Lab Handbook.</p>
 
                           </div>
                           <div class="modal-footer background-nav-blue">
-                            <a data-navigate="patient1view22" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                            <a data-navigate="patient1view22" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
 
                           </div>
                         </div>
