--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -86,7 +86,7 @@
                           <h2>Correct! The area you clicked on indicates abnormal breast tissue.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
-                          <a href="/patient1view5" data-navigate="patient1view5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue &#8594;</button></a>
+                          <a href="/patient1view5" data-navigate="patient1view5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
 
                         </div>
                       </div>
