--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -169,7 +169,7 @@
                 <h2>Correct! Yes, it is about the size of a walnut.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue &#8594;</button></a>
+                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
               </div>
             </div>
           </div>
