--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -102,7 +102,7 @@ Review Brittany’s mammogram and click on an area that shows abnormalities.
                           <h2>Correct! The area you clicked on indicates abnormal breast tissue.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient3view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue &#8594;</button></a>
+                          <a data-navigate="patient3view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
 
                         </div>
                       </div>
