fixed multiple image refs and updated to new images

--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -68,11 +68,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
 
             <div class="svg-container">
                 <img src="images/Microscope_GreenRedDots_6_5.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
 
-                      <span class="left-arrow"><a data-navigate="patient1view29" >&#8594;</a></span>
-
-                </div>
                 <p>
                   Now you’re ready to observe the fluorescence micrograph!
                 </p>
@@ -86,7 +82,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view29" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
