--- a/src/javascript/templates/patient1/patient1View31-2.hbs
+++ b/src/javascript/templates/patient1/patient1View31-2.hbs
@@ -51,35 +51,34 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-  Velma’s doctors have sent her tissue sample for HER2 FISH testing.        </blockquote>
+  Velma’s doctors have sent her tissue sample for OncoType DX® testing.
+       </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
-        <h2>Conducting the HER2 FISH Test:</h2>
+        <h2>Conducting the test:</h2>
             <div class="svg-container">
-                <img src="images/microscope6.jpg" alt="cell biopsy slide 3" />
+                <img src="images/test_tubes.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 5</strong>
-    The fluorescence is observed using a fluorescence microscope.
+  <strong>Step 2</strong>
+  RNA is extracted from the sample for analysis.
 
   </p>
-                      <span class="left-arrow"><a data-navigate="patient1view27" >&#8594;</a></span>
+                      <span class="left-arrow"><a data-navigate="patient1view32" >&#8594;</a></span>
 
                 </div>
-                <p>
-                  Now you’re ready to observe the fluorescence micrograph!
-                </p>
+
             </div>
             <div class="row continue-container background-nav-blue">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
-                    <a data-navigate="patient1view25" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                    <a data-navigate="patient1view30" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                   </div>
                   <div class="col-md-4 line-across">
 
                   </div>
                   <div class="col-md-4">
-                    <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
