--- a/src/javascript/templates/patient1/patient1View31.hbs
+++ b/src/javascript/templates/patient1/patient1View31.hbs
@@ -62,11 +62,11 @@
                     <p>
                       <strong>Step 1</strong>
    The pathologist sends a piece of the cancer tissue for analysis.
-<strong>Step 2</strong>  RNA is extracted from the sample for analysis.
+
 
 
   </p>
-                      <span class="left-arrow"><a data-navigate="patient1view32" >&#8594;</a></span>
+                      <span class="left-arrow"><a data-navigate="patient1view31_2" >&#8594;</a></span>
 
                 </div>
 
