--- a/src/javascript/templates/patient1/patient1View33.hbs
+++ b/src/javascript/templates/patient1/patient1View33.hbs
@@ -58,7 +58,7 @@
 
         <h2>Conducting the test:</h2>
             <div class="svg-container">
-                <img src="images/doctor_with_clipboard.jpg" alt="cell biopsy slide 3" />
+                <img src="images/clipboard2.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
                       <strong>Step 4</strong>
