--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -64,7 +64,7 @@
 
 </ul>
 <figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Michele.jpg" src="images/HE_Invasive_Michele.jpg" alt="cell biopsy slide 3" />
 </figure>
 
 
