--- a/src/javascript/templates/patient2/patient2view6.hbs
+++ b/src/javascript/templates/patient2/patient2view6.hbs
@@ -64,7 +64,9 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
 
         </ul>
       </p>
-
+        <figure>
+          <img src="images/Discovery_ValSkinner_PathologyReports_3.jpg" alt="" />
+        </figure>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
