--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -64,7 +64,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
 
 </ul>
 <figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Brittany.jpg" src="images/HE_Invasive_Brittany.jpg" alt="cell biopsy slide 3" />
 </figure>
 
 
