--- a/src/javascript/templates/index.hbs
+++ b/src/javascript/templates/index.hbs
@@ -11,6 +11,7 @@
 <div style="margin-top:4em;">
 <a data-navigate="patient1view6">patient1view6</a><br>
 <a data-navigate="patient1view11">patient1view11</a><br>
+<a data-navigate="patient1view30">patient1view30</a><br>
 <a data-navigate="patient2view1">patient2view1</a><br>
 <a data-navigate="patient2view11">patient2view11</a><br>
 <a data-navigate="patient3view1">patient3view1</a><br>
