--- a/src/javascript/templates/patient1/patient1View27.hbs
+++ b/src/javascript/templates/patient1/patient1View27.hbs
@@ -64,11 +64,7 @@ In this example. the ratio of red dots to green dots is 6:2, or 3.  This means t
 </p>
             <div class="svg-container">
                 <img src="images/Microscope_GreenRedDots_6_2.jpg" alt="cell biopsy slide 3" />
-                <div class="svg-text full">
 
-                      <span class="left-arrow"><a data-navigate="patient1view28" >&#8594;</a></span>
-
-                </div>
                 <p>
                   Now you’re ready to observe the fluorescence micrograph!
                 </p>
@@ -82,7 +78,7 @@ In this example. the ratio of red dots to green dots is 6:2, or 3.  This means t
 
                   </div>
                   <div class="col-md-4">
-                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view28" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
