--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -66,7 +66,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
 
 </ul>
 <figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+  <img class="magnify one-hun" class="zoom" data-magnify-src="images/ERNeg_Invasive_IHC_Michele.jpg" src="images/ERNeg_Invasive_IHC_Michele.jpg" alt="cell biopsy slide 3" />
 </figure>
 
 
