--- a/src/javascript/templates/patient3/patient3view1.hbs
+++ b/src/javascript/templates/patient3/patient3view1.hbs
@@ -48,7 +48,7 @@ In this segment of the Decoding Cancer Virtual Lab, you will evaluate Brittanyâ€
 
 </p>
          <figure class="m-bottom">
-           <img src="images/patient2slide1.png" alt="" />
+           <img src="images/patient_and_doctor2.jpg" alt="" />
 
 
 
