--- a/src/javascript/templates/patient3/patient3view6.hbs
+++ b/src/javascript/templates/patient3/patient3view6.hbs
@@ -64,6 +64,9 @@ The pathologist examined Brittany’s tissue and has provided a pathology report
 
         </ul>
       </p>
+      <figure>
+        <img src="images/Discovery_ValSkinner_PathologyReports_2.jpg" alt="" />
+      </figure>
 
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
