got rid of line on step interactives, fixed white bar showing on brittany card startview2,fixed patient 2 and 3 interactive svgs

--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -68,7 +68,7 @@ A second antibody binds to the first and color develops where this antibody bind
 
 
                 </p>
-              <span class="left-arrow"><a href="/patient1view19" data-navigate="patient1view19">&#8594;</a></span>
+              <span class="left-arrow"><a class="y-n" href="/patient1view19" data-navigate="patient1view19">&#8594;</a></span>
 
           </div>
       </div>
