--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -77,7 +77,7 @@
                 <p>
                   <strong>Step 3</strong>
                 </p>
-                  <span class="left-arrow"><a href="/patient1view20" data-navigate="patient1view20">&#8594;</a></span>
+                  <span class="left-arrow"><a class="y-n" href="/patient1view20" data-navigate="patient1view20">&#8594;</a></span>
 
             </div>
         </div>
