--- a/src/javascript/templates/patient1/patient1View25.hbs
+++ b/src/javascript/templates/patient1/patient1View25.hbs
@@ -62,7 +62,7 @@
                       <strong>Step 4</strong>
   The medium that contains the fluorescent dye is applied to the slide.
                     </p>
-                      <span class="left-arrow"><a data-navigate="patient1view26" >&#8594;</a></span>
+                      <span class="left-arrow"><a class="y-n" data-navigate="patient1view26" >&#8594;</a></span>
 
                 </div>
             </div>
