--- a/src/javascript/templates/patient1/patient1View26.hbs
+++ b/src/javascript/templates/patient1/patient1View26.hbs
@@ -63,7 +63,7 @@
     The fluorescence is observed using a fluorescence microscope.
 
   </p>
-                      <span class="left-arrow"><a data-navigate="patient1view27" >&#8594;</a></span>
+                      <span class="left-arrow"><a class="y-n" data-navigate="patient1view27" >&#8594;</a></span>
 
                 </div>
                 <p>
