--- a/src/javascript/templates/patient1/patient1View32.hbs
+++ b/src/javascript/templates/patient1/patient1View32.hbs
@@ -64,7 +64,7 @@
                       <strong>Step 3</strong>
   An automated multi-gene analysis is conducted on the selected 21 genes.
   </p>
-                      <span class="left-arrow"><a data-navigate="patient1view33" >&#8594;</a></span>
+                      <span class="left-arrow"><a class="y-n" data-navigate="patient1view33" >&#8594;</a></span>
 
                 </div>
 
