--- a/src/javascript/templates/patient1/patient1View33.hbs
+++ b/src/javascript/templates/patient1/patient1View33.hbs
@@ -65,7 +65,7 @@
    A score is calculated.
 
   </p>
-                      <span class="left-arrow"><a href="startview2" data-navigate="startview2">&#8594;</a></span>
+                      <span class="left-arrow"><a class="y-n" href="startview2" data-navigate="startview2">&#8594;</a></span>
 
                 </div>
 
