--- a/src/javascript/templates/patient1/patient1View7.hbs
+++ b/src/javascript/templates/patient1/patient1View7.hbs
@@ -59,7 +59,7 @@
 Tissue is fixed and placed into wax.
 
                             </p>
-                          <span class="left-arrow"><a class="continue next" data-navigate="patient1view7_2">&#8594;</a></span>
+                          <span class="left-arrow"><a class="continue next y-n" data-navigate="patient1view7_2">&#8594;</a></span>
 
                       </div>
                   </div>
