--- a/src/javascript/templates/patient1/patient1View7-2.hbs
+++ b/src/javascript/templates/patient1/patient1View7-2.hbs
@@ -59,7 +59,7 @@
 Tissue sections are cut and placed onto a glass slide.
 
                             </p>
-                          <span class="left-arrow"><a class="continue next" data-navigate="patient1view7_3">&#8594;</a></span>
+                          <span class="left-arrow"><a class="continue next y-n" data-navigate="patient1view7_3">&#8594;</a></span>
 
                       </div>
                   </div>
