--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -358,6 +358,7 @@ top: 13px;
     padding: 0em;
     .no-pad {
       cursor:pointer;
+      height: 100%;
     }
     .col-md-5 {
       z-index: 9999;
