--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -28,11 +28,11 @@
           </ul>
           <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span>Her2 Test</li>
+            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span>HER2 Test</li>
           </ul>
           <ul>
             <li><span></span></li>
-            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span>Her2 Test</li>
+            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span>HER2 Test</li>
           </ul>
         </div>
       </nav>
