fixed patient2view1 biopsy bug

--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -9,7 +9,7 @@
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="ul-fix">
+          <ul class="">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_off.png" alt="" /></span>Biopsy</li>
           </ul>
