updated copy patient1view6,view4 and view9, also made updates to view5 and patient2 and 3 view 2(same interactive)

--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -46,15 +46,11 @@
 
       </p>
       <div class="svg-container">
-        <div class="svg-text2">Click the area that shows an abnormality.</div>
+        <div class="svg-text2">Which object is closest in size?</div>
         <figure>
           <img src="images/p1screen3.png" alt="" />
         </figure>
       </div>
-
-      <p>
-      Which object is closest in size?
-      </p>
 
 
 
