--- a/src/javascript/templates/patient1/patient1View6.hbs
+++ b/src/javascript/templates/patient1/patient1View6.hbs
@@ -52,7 +52,8 @@
       </blockquote>
         <main id="content-main" class="row patient-1">
 
-          <p class="margin-bottom ">A biopsy is needed when the physician finds an abnormal area on a mammogram. Other symptoms indicating a biopsy is needed are any lumps that can be felt, bloody nipple discharge, and changes in the skin that may be suggestive of cancer.
+          <p class="margin-bottom ">
+            A biopsy is needed when the physician finds an abnormal area on a mammogram. Other symptoms indicating a biopsy is needed are any lumps that can be felt and changes in the skin that may be suggestive of cancer.
               </p>
 
               <div class="row continue-container background-nav-blue">
