--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -65,13 +65,11 @@
               <main id="content-main" class="row patient-1">
 
                 <h2>Conducting the biopsy:</h2>
-                <p>Does this tissue sample indicate the presence of cancer?
+                <p>Does Velma's breast tissue sample indicate the presence of cancer?
                             </p>
                      <figure>
                        <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Velma.jpg" src="images/HE_Invasive_Velma.jpg" alt="cell biopsy slide 3" />
 
-
-Velma’s breast tissue sample
 
                      </figure>
                      <div class="row m-bottom">
