--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -37,7 +37,7 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-    Here is Velma's mammogram
+    Here is Velma's mammogram.
     </blockquote>
     <main id="content-main" class="row patient-1 svg-test">
 
