fixed completed image for patient2 to be purple and fixed a couple startview errors with copy and clicking to continue

--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -32,7 +32,7 @@
   <div class="overlay-purple"></div>
     <div class="col-md-5 no-pad">
       <img class="patient2" src="images/patient1-final.jpg">
-      <img class="up-next finished" src="images/completed.png" alt="" />
+      <img class="up-next finished" src="images/completed-purple.jpg" alt="" />
     </div>
     <div class="col-md-7 no-pad">
       <img class="lock" src="images/medical.png" alt="" />
@@ -45,7 +45,6 @@
         <div class="row patient-copy">
             <p>
                 Michele is a 47&mdash;year old female. Her physician spotted abnormal tissue during a routine mammogram. Michele has never had breast cancer before.
-                <a href="/patient2view1" data-navigate="patient2view1">Click here to continue.</a>
             </p>
         </div>
     </div>
@@ -68,6 +67,7 @@
     <div class="row patient-copy">
       <p>
         Brittany is a 39&mdash;year old female. She was successfully treated for breast cancer at the age of 32. During her monthly self-breast exam, Brittany felt a lump in her left breast and immediately consulted her physician, who ordered a mammogram.
+<a href="/patient3view1" data-navigate="patient3view1">Click here to continue.</a>
       </p>
     </div>
 </a>
