--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -489,7 +489,7 @@ top: 13px;
   }
 }
 .no-link-color2 {
-  position: absolute;
+  position: relative;
   text-decoration: none!important;
   color: #404040;
   &:hover {
