fixed first screen not showing when using keyboard navigation and fixed user flow of the Walnut/Pea pick a size interactive

--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -106,7 +106,7 @@
       <div class="col-md-4 line-across"></div>
       <div class="col-md-4">
         <!-- Button trigger modal -->
-        <a class="continue next"><button type="button muted" style="color: gray;cursor:default;" data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
+        <a class="continue next gray"><button type="button muted"  data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
         <!-- Modal -->
         <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
