--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -104,13 +104,61 @@
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient3view2" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
+                 <a class="previous" href="/patient3view2" data-navigate="patient3view2"><button class="" type="button" name="button">&#8592; Previous</button></a>
                </div>
-               <div class="col-md-4 line-across">
-
-               </div>
+               <div class="col-md-4 line-across"></div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view4" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <!-- Button trigger modal -->
+                 <a class="continue next gray"><button type="button muted"  data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
+                 <!-- Modal -->
+                 <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                   <div class="modal-dialog" role="document">
+                     <div class="modal-content">
+                       <div class="modal-body">
+                         <h2>Correct! Yes, it is about the size of a walnut.</h2>
+                       </div>
+                       <div class="modal-footer background-nav-blue">
+                         <a href="/patient3view4" data-navigate="patient3view4" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+                 <div class="modal fade" id="modalIncorrect1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                   <div class="modal-dialog" role="document">
+                     <div class="modal-content">
+                       <div class="modal-body">
+                         <h2>Incorrect! Please try again.</h2>
+                       </div>
+                       <div class="modal-footer background-nav-blue">
+                         <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+                 <div class="modal fade" id="modalIncorrect2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                   <div class="modal-dialog" role="document">
+                     <div class="modal-content">
+                       <div class="modal-body">
+                         <h2>Incorrect! Please try again.</h2>
+                       </div>
+                       <div class="modal-footer background-nav-blue">
+                         <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+                 <div class="modal fade" id="modalIncorrect3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                   <div class="modal-dialog" role="document">
+                     <div class="modal-content">
+                       <div class="modal-body">
+                         <h2>Incorrect! Please try again.</h2>
+                       </div>
+                       <div class="modal-footer background-nav-blue">
+                         <a class="continue close-modal"><button class="" id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
                </div>
              </div>
          </div>
