--- a/src/javascript/templates/screen2IntroView.hbs
+++ b/src/javascript/templates/screen2IntroView.hbs
@@ -18,6 +18,7 @@ Precision medicine is changing the face of cancer treatment.
 </p>
     <div class="row continue-container">
         <div class="col-md-12 no-pad text-center">
+          <a class="previous" data-navigate="/"></a>
           <a data-navigate="startview" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
         </div>
     </div>
