--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -562,7 +562,9 @@ top: -4px;
   position: relative;
   max-width: 250px;
   min-width: 250px;
-  ul li {
+  ul {
+        padding-left: 35px;
+    li {
     text-transform:none;
     &:nth-child(1){
       padding-top:25px;
@@ -571,12 +573,13 @@ top: -4px;
       padding-bottom:25px;
     }
   }
+}
   .next-steps {
     background-color:$nav-gray;
     margin-right: 0px;
     ul {
       margin-bottom:0!important;
-      padding:0px 50px 0px 50px;
+      padding:0px 35px 0px 50px;
       li:nth-child(1) {
         color: #677A84;
       }
@@ -587,14 +590,14 @@ top: -4px;
       }
     }
     ul:nth-child(1) {
-          padding:0px 50px 0px 50px;
+          padding:0px 35px 0px 50px;
 
     }
     ul:nth-child(2) {
-      padding:0px 50px 0px 50px;
+      padding:0px 35px 0px 50px;
     }
     ul:nth-child(3) {
-      padding:0px 50px 0px 50px;
+      padding:0px 35px 0px 50px;
     }
   }
   .border-bottom {
