--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -335,6 +335,7 @@ top: 13px;
 &.patient1 {
   outline: rgba(221,48,123,.7) solid 15px;
   outline-offset: -15px;
+
 }
 &.patient2 {
   outline: rgba(118,23,179,.7) solid 15px;
@@ -366,15 +367,15 @@ top: 13px;
         width: 100%;
         margin-bottom: 0em;
         &.patient1 {
-          outline: rgba(221,48,123,.7) inset 15px;
+          outline: rgba(221,48,123,.7) solid 15px;
           outline-offset: -15px;
         }
         &.patient2 {
-          outline: rgba(118,23,179,.7) inset 15px;
+          outline: rgba(118,23,179,.7) solid 15px;
           outline-offset: -15px;
         }
         &.patient3 {
-          outline: rgba(44,167,117, .7) inset 15px;
+          outline: rgba(44,167,117, .7) solid 15px;
           outline-offset: -15px;
         }
       }
@@ -386,6 +387,8 @@ top: 13px;
       &.finished {
         left: -48px;
       top: -1px;
+      cursor:default!important;
+      pointer-events: none;
       }
     }
     .lock {
