fixed arrows not being centered on step interactives, and fixed the line after the next buttons on all patients

--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -63,7 +63,7 @@
 
 
                   </p>
-                <span class="left-arrow"><a class="top-fix y-n" data-navigate="patient1view18">&#8594;</a></span>
+                <span class="left-arrow"><a class="top-fix y-n top-3" data-navigate="patient1view18">&#8594;</a></span>
 
             </div>
         </div>
