--- a/src/javascript/templates/patient1/patient1View22.hbs
+++ b/src/javascript/templates/patient1/patient1View22.hbs
@@ -65,7 +65,7 @@ The slide is heated at 82° C to denature the sample.
 
 
                 </p>
-              <span class="left-arrow"><a class="y-n" href="/patient1view23" data-navigate="patient1view23">&#8594;</a></span>
+              <span class="left-arrow"><a class="y-n top-4" href="/patient1view23" data-navigate="patient1view23">&#8594;</a></span>
 
           </div>
       </div>
