--- a/src/javascript/templates/patient1/patient1View24.hbs
+++ b/src/javascript/templates/patient1/patient1View24.hbs
@@ -75,7 +75,7 @@
                   <strong>Step 3</strong>
               Step 3:  The slides are dehydrated in ethanol and air-dried.
 </p>
-                  <span class="left-arrow"><a class="y-n" href="/patient1view25" data-navigate="patient1view25">&#8594;</a></span>
+                  <span class="left-arrow"><a class="y-n top-4" href="/patient1view25" data-navigate="patient1view25">&#8594;</a></span>
 
             </div>
         </div>
