--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -67,7 +67,7 @@
     <div class="row patient-copy">
       <p>
         Brittany is a 39&mdash;year old female. She was successfully treated for breast cancer at the age of 32. During her monthly self-breast exam, Brittany felt a lump in her left breast and immediately consulted her physician, who ordered a mammogram.
-<a href="/patient3view1" data-navigate="patient3view1">Click here to continue.</a>
+<a class="text-blue" href="/patient3view1" data-navigate="patient3view1">Click here to continue.</a>
       </p>
     </div>
 </a>
