--- a/src/javascript/templates/patient1/patient1View31.hbs
+++ b/src/javascript/templates/patient1/patient1View31.hbs
@@ -66,7 +66,7 @@
 
 
   </p>
-                      <span class="left-arrow"><a class="y-n" data-navigate="patient1view31_2" >&#8594;</a></span>
+                      <span class="left-arrow"><a class="y-n top-4" data-navigate="patient1view31_2" >&#8594;</a></span>
 
                 </div>
 
