--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -128,7 +128,7 @@ main {
     padding-left: 0!important;
     padding-right: 0!important;
     width: 100%;
-    min-width: 606px;
+    min-width: 662px;
     // max-width: 606px;
     margin-bottom:3em;
     p {
@@ -146,9 +146,9 @@ main {
     padding-left: 0!important;
     padding-right: 0!important;
     width: 100%;
-    min-width: 606px;
-    max-width: 606px;
-    margin-bottom:3em;
+    min-width: 662px;
+    // max-width: 606px;
+    margin-bottom:6em;
     p {
       padding: 2em 1em 2em 2em;
     }
@@ -1272,9 +1272,7 @@ iframe {
 .steps-13 {
   height: 338px!important;
 }
-.next-test:after {
-  right: -34px!important;
-}
+
 .arrow-start {
   position: absolute;
   top: 43px;
@@ -1350,7 +1348,18 @@ text-transform:none;
     top: 15px;
   }
 }
-
+.top-1 {
+      top: 76px!important;
+}
+.top-2 {
+      top: 108px!important;
+}
+.top-3 {
+      top: 94px!important;
+}
+.top-4 {
+      top: 84px!important;
+}
 button {
   text-transform: uppercase;
   font-weight: 100!important;
@@ -1363,4 +1372,8 @@ button {
   &.highlight {
     color: white!important;
   }
+}
+
+.text-blue {
+  color: #337ab7!important;
 }
