fixed step interactive arrow to be a whole clickable button

--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -63,7 +63,7 @@
 
 
                   </p>
-                <span class="left-arrow"><a class="top-fix y-n top-3" data-navigate="patient1view18">&#8594;</a></span>
+                <a class="continue next y-n left-arrow" data-navigate="patient1view18"><span class="top-3">&#8594;</span></a>
 
             </div>
         </div>
