--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -73,7 +73,7 @@
                   <p>
                     <strong>Step 2</strong>
 The sample is washed in a buffer agent.</p>
-                    <span class="left-arrow"><a class="y-n top-1" data-navigate="patient1view24">&#8594;</a></span>
+                    <a class="y-n left-arrow continue next" data-navigate="patient1view24"><span class="top-1">&#8594;</span></a>
 
               </div>
           </div>
