--- a/src/javascript/templates/patient1/patient1View25.hbs
+++ b/src/javascript/templates/patient1/patient1View25.hbs
@@ -62,7 +62,7 @@
                       <strong>Step 4</strong>
   The medium that contains the fluorescent dye is applied to the slide.
                     </p>
-                      <span class="left-arrow"><a class="y-n top-4" data-navigate="patient1view26" >&#8594;</a></span>
+                    <a class="y-n continue next left-arrow" data-navigate="patient1view26"><span class="top-4">&#8594;</span></a>
 
                 </div>
             </div>
