--- a/src/javascript/templates/patient1/patient1View26.hbs
+++ b/src/javascript/templates/patient1/patient1View26.hbs
@@ -63,7 +63,7 @@
     The fluorescence is observed using a fluorescence microscope.
 
   </p>
-                      <span class="left-arrow"><a class="y-n top-4" data-navigate="patient1view27" >&#8594;</a></span>
+                      <a class="y-n continue next left-arrow" data-navigate="patient1view27" ><span class="top-4">&#8594;</span></a>
 
                 </div>
                 <p>
