--- a/src/javascript/templates/patient1/patient1View7.hbs
+++ b/src/javascript/templates/patient1/patient1View7.hbs
@@ -59,7 +59,7 @@
 Tissue is fixed and placed into wax.
 
                             </p>
-                          <span class="left-arrow"><a class="continue next y-n top-1" data-navigate="patient1view7_2">&#8594;</a></span>
+                          <a class="left-arrow continue next y-n" data-navigate="patient1view7_2"><span class="top-1">&#8594;</span></a>
 
                       </div>
                   </div>
