--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -68,7 +68,7 @@ A second antibody binds to the first and color develops where this antibody bind
 
 
                 </p>
-              <span class="left-arrow"><a class="y-n top-4" href="/patient1view19" data-navigate="patient1view19">&#8594;</a></span>
+              <a class="y-n continue next y-n left-arrow" href="/patient1view19" data-navigate="patient1view19"><span class="top-4">&#8594;</span></a>
 
           </div>
       </div>
