--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -77,7 +77,7 @@
                 <p>
                   <strong>Step 3</strong>
                 </p>
-                  <span class="left-arrow"><a class="y-n top-1" href="/patient1view20" data-navigate="patient1view20">&#8594;</a></span>
+                  <a class="y-n continue next left-arrow" href="/patient1view20" data-navigate="patient1view20"><span class="top-1">&#8594;</span></a>
 
             </div>
         </div>
