--- a/src/javascript/templates/patient1/patient1View31-2.hbs
+++ b/src/javascript/templates/patient1/patient1View31-2.hbs
@@ -64,7 +64,7 @@
   RNA is extracted from the sample for analysis.
 
   </p>
-                      <span class="left-arrow"><a class="y-n" data-navigate="patient1view32" >&#8594;</a></span>
+                      <a class="y-n continue next left-arrow" data-navigate="patient1view32" ><span class="top-4">&#8594;</span></a>
 
                 </div>
 
