--- a/src/javascript/templates/patient1/patient1View31.hbs
+++ b/src/javascript/templates/patient1/patient1View31.hbs
@@ -66,7 +66,7 @@
 
 
   </p>
-                      <span class="left-arrow"><a class="y-n top-4" data-navigate="patient1view31_2" >&#8594;</a></span>
+                    <a class="y-n continue next left-arrow" data-navigate="patient1view31_2" >  <span class="top-4">&#8594;</span></a>
 
                 </div>
 
