--- a/src/javascript/templates/patient1/patient1View33.hbs
+++ b/src/javascript/templates/patient1/patient1View33.hbs
@@ -65,7 +65,7 @@
    A score is calculated.
 
   </p>
-                      <span class="left-arrow"><a class="y-n top-1" href="startview2" data-navigate="startview2">&#8594;</a></span>
+                      <a class="y-n continue next left-arrow" href="startview2" data-navigate="startview2"><span class="top-1">&#8594;</span></a>
 
                 </div>
 
