--- a/src/javascript/templates/patient1/patient1View7-2.hbs
+++ b/src/javascript/templates/patient1/patient1View7-2.hbs
@@ -59,7 +59,7 @@
 Tissue sections are cut and placed onto a glass slide.
 
                             </p>
-                          <span class="left-arrow"><a class="continue next y-n top-4" data-navigate="patient1view7_3">&#8594;</a></span>
+                          <a class="continue next y-n left-arrow" data-navigate="patient1view7_3"><span class="top-4">&#8594;</span></a>
 
                       </div>
                   </div>
