--- a/src/javascript/templates/patient1/patient1View7-3.hbs
+++ b/src/javascript/templates/patient1/patient1View7-3.hbs
@@ -59,7 +59,7 @@
  Tissue is stained with two different-colored chemicals to help the pathologist determine whether or not the cells from the tissue sample are cancerous.
 
                             </p>
-                          <span class="left-arrow"><a class="top-fix continue next y-n top-2" data-navigate="patient1view8">&#8594;</a></span>
+                          <a class="top-fix continue next y-n left-arrow" data-navigate="patient1view8"><span class="top-2">&#8594;</span></a>
 
                       </div>
                   </div>
